<resources>
    <string name="app_name">Cini Corn</string>
    <string name="register_movie">Register Movie</string>
    <string name="favourites">Favourites</string>
    <string name="edit_movies">Edit Movies</string>
    <string name="search">Search</string>
    <string name="ratings">Ratings</string>
    <string name="display_movies">Display Movies</string>
    <string name="cini_corn">Cini Corn</string>
    <string name="img_logo">img_logo</string>
    <string name="button">Button</string>
    <string name="save">Save</string>
    <string name="movie_list">Movie List</string>
    <string name="add_to_favourites">Add to Favourites</string>
    <string name="title_of_the_movie">Title of the Movie</string>
    <string name="year_movies_after_1895">Year (movies after 1895)</string>
    <string name="name_of_director">Name of Director</string>
    <string name="name_of_actor_actresses">Name of Actor/Actresses</string>
    <string name="enter_the_rating_1_10">Enter the Rating (1- 10)</string>
    <string name="enter_movie_review">Enter Movie Review</string>
    <string name="clear">Clear</string>
    <string name="watched_movies">Watched Movies</string>
    <string name="movieimg">movieImg</string>
    <string name="popcorn_image">popcorn image</string>
    <string name="update">Update</string>
    <string name="lookup">Lookup</string>
    <string name="enter_movie_name_director_actors">Enter Movie Name/ Director/Actors</string>
    <string name="movies">Movies</string>
    <string name="find_movie">Find Movie</string>
    <string name="find_movie_in_imdb">Find Movie in IMDB</string>
    <string name="rating">Rating</string>
    <string name="review">Review</string>
    <string name="favorite_not_favourite">Favorite/Not Favourite</string>
    <string name="movie_cast">Movie Cast</string>
    <string name="director">Director</string>
    <string name="year">Year</string>
    <string name="movie_name">Movie Name</string>
</resources>