<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".DisplayMovieDetailsScreen">

    <ImageView
        android:id="@+id/moviePageImg"
        android:layout_width="82dp"
        android:layout_height="74dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/movieimg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.276"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/icon7" />

    <EditText
        android:id="@+id/inputMovieTitle"
        android:layout_width="200dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/title_of_the_movie"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/hintColor2"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.849"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputMovieYear"
        android:layout_width="200dp"
        android:layout_height="44dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:defaultValue="1896"
        android:ems="10"
        android:hint="@string/year_movies_after_1895"
        android:inputType="number"
        android:maxLength="4"
        android:textColor="@color/white"
        android:textColorHint="@color/hintColor2"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.849"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputMovieTitle" />

    <EditText
        android:id="@+id/inputMovieDirector"
        android:layout_width="200dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/name_of_director"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/hintColor2"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.849"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputMovieYear" />

    <EditText
        android:id="@+id/inputMovieCast"
        android:layout_width="200dp"
        android:layout_height="69dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/name_of_actor_actresses"
        android:inputType="textMultiLine|textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/hintColor2"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.849"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputMovieDirector" />

    <EditText
        android:id="@+id/inputMovieRating"
        android:layout_width="200dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_the_rating_1_10"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/hintColor2"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.849"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputMovieCast" />

    <EditText
        android:id="@+id/inputMovieReview"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="44dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_movie_review"
        android:inputType="textMultiLine|textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/hintColor2"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputMovieRating" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="118dp"
        android:layout_height="132dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/popcorn_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/popcorn" />

    <Button
        android:id="@+id/updateBtn"
        android:layout_width="118dp"
        android:layout_height="57dp"
        android:layout_marginTop="68dp"
        android:backgroundTint="@color/buttoncolor1"
        android:onClick="updateMovieDetails"
        android:text="@string/update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.61"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputMovieReview" />

    <EditText
        android:id="@+id/inputFavouriteState"
        android:layout_width="200dp"
        android:layout_height="44dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/favorite_not_favourite"
        android:inputType="textMultiLine|textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/hintColor2"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.865"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputMovieReview" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="343dp"
        android:layout_height="41dp"
        android:layout_marginTop="4dp"
        android:numStars="10"
        android:progressTint="@color/ratingColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputMovieRating" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="130dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:gravity="center|left"
        android:text="@string/movie_name"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/inputMovieTitle"
        app:layout_constraintHorizontal_bias="0.607"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="130dp"
        android:layout_height="42dp"
        android:layout_marginTop="12dp"
        android:gravity="center|start"
        android:text="@string/year"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/inputMovieYear"
        app:layout_constraintHorizontal_bias="0.588"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="130dp"
        android:layout_height="42dp"
        android:layout_marginTop="20dp"
        android:gravity="center|start"
        android:text="@string/director"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/inputMovieDirector"
        app:layout_constraintHorizontal_bias="0.588"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="130dp"
        android:layout_height="42dp"
        android:layout_marginTop="20dp"
        android:gravity="center|start"
        android:text="@string/movie_cast"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/inputMovieDirector"
        app:layout_constraintHorizontal_bias="0.588"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="130dp"
        android:layout_height="42dp"
        android:layout_marginTop="36dp"
        android:gravity="center|start"
        android:text="@string/rating"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/inputMovieDirector"
        app:layout_constraintHorizontal_bias="0.588"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="130dp"
        android:layout_height="42dp"
        android:layout_marginTop="68dp"
        android:gravity="center|start"
        android:text="@string/review"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/inputMovieDirector"
        app:layout_constraintHorizontal_bias="0.588"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />


    <TextView
        android:id="@+id/textView7"
        android:layout_width="137dp"
        android:layout_height="53dp"
        android:layout_marginTop="32dp"
        android:gravity="center|start"
        android:text="@string/favorite_not_favourite"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/inputMovieDirector"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

</androidx.constraintlayout.widget.ConstraintLayout>