<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".RegisterMovieScreen">

    <TextView
        android:id="@+id/favouritesPageTitle"
        android:layout_width="295dp"
        android:layout_height="39dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/macondo_swash_caps"
        android:text="@string/register_movie"
        android:textColor="@color/pink"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="118dp"
        android:layout_height="57dp"
        android:layout_marginBottom="56dp"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:backgroundTint="@android:color/holo_blue_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.203"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/inputMovieTitle"
        android:layout_width="350dp"
        android:layout_height="44dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/title_of_the_movie"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/hintColor2"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.372"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favouritesPageTitle"
        android:autofillHints="" />

    <EditText
        android:id="@+id/inputMovieYear"
        android:layout_width="348dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:defaultValue="1896"
        android:ems="10"
        android:hint="@string/year_movies_after_1895"
        android:inputType="number"
        android:maxLength="4"
        android:textColor="@color/white"
        android:textColorHint="@color/hintColor2"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputMovieTitle" />

    <EditText
        android:id="@+id/inputMovieDirector"
        android:layout_width="349dp"
        android:layout_height="41dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/name_of_director"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/hintColor2"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputMovieYear"
        android:autofillHints="" />

    <EditText
        android:id="@+id/inputMovieCast"
        android:layout_width="353dp"
        android:layout_height="69dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/name_of_actor_actresses"
        android:inputType="textMultiLine|textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/hintColor2"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputMovieDirector" />

    <EditText
        android:id="@+id/inputMovieRating"
        android:layout_width="349dp"
        android:layout_height="49dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/enter_the_rating_1_10"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/hintColor2"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputMovieCast"
        android:autofillHints="" />

    <EditText
        android:id="@+id/inputMovieReview"
        android:layout_width="353dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/enter_movie_review"
        android:inputType="textMultiLine|textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/hintColor2"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputMovieRating"
        android:autofillHints="" />

    <Button
        android:id="@+id/clearBtn"
        android:layout_width="118dp"
        android:layout_height="57dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="56dp"
        android:backgroundTint="@color/pink"
        android:onClick="clearText"
        android:text="@string/clear"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>