<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="176dp"
        android:layout_height="133dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="204dp"
        android:onClick="launchRegisterMovie"
        android:text="@string/register_movie"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:backgroundTint="@color/buttoncolor1"
        app:icon="@drawable/icon1"
        app:iconGravity="start"
        app:iconPadding="1dp"
        app:iconSize="40dp"
        app:iconTint="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/displayBtn"
        android:layout_width="176dp"
        android:layout_height="133dp"
        android:layout_marginTop="204dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="launchDisplayMovies"
        android:text="@string/display_movies"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:backgroundTint="@color/buttoncolor1"
        app:icon="@drawable/icon2"
        app:iconSize="40dp"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/registerBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/favouritesBtn"
        android:layout_width="176dp"
        android:layout_height="133dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="370dp"
        android:layout_marginBottom="30dp"
        android:gravity="bottom|top|left"
        android:onClick="launchFavourites"
        android:text="@string/favourites"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:backgroundTint="@color/buttoncolor1"
        app:icon="@drawable/icon3"
        app:iconGravity="start"
        app:iconSize="35dp"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/searchBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/EditBtn"
        android:layout_width="176dp"
        android:layout_height="133dp"
        android:layout_marginTop="370dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="30dp"
        android:onClick="launchEditMovies"
        android:text="@string/edit_movies"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:backgroundTint="@color/buttoncolor1"
        app:icon="@drawable/icon4"
        app:iconSize="40dp"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/ratingsBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/favouritesBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.502" />

    <Button
        android:id="@+id/searchBtn"
        android:layout_width="176dp"
        android:layout_height="133dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="410dp"
        android:onClick="launchSearch"
        android:text="@string/search"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:backgroundTint="@color/buttoncolor1"
        app:icon="@drawable/icon5"
        app:iconSize="60dp"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ratingsBtn"
        android:layout_width="176dp"
        android:layout_height="133dp"
        android:layout_marginTop="410dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="launchRatings"
        android:text="@string/ratings"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:backgroundTint="@color/buttoncolor1"
        app:icon="@drawable/icon6"
        app:iconSize="60dp"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logoImg"
        android:layout_width="129dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/img_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/popcorn" />

    <TextView
        android:id="@+id/logoName"
        android:layout_width="268dp"
        android:layout_height="67dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/macondo_swash_caps"
        android:gravity="center_horizontal"
        android:text="@string/cini_corn"
        android:textColor="@color/buttoncolor1"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>